# ffmpeg_lib_test

./: .gitignore  README.md
Project1/: Project1.sln
Project1/Project1/: 1.c  1.cpp  CMakeLists.txt  Project1.vcxproj  Project1.vcxproj.filters  avcodec_encode.cpp  avcodec_encode.hpp  main.cpp  源.cpp
Project1/Project1/Debug/: vc142.idb
Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate
Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/x64/Debug/: Project1.ilk
ffmpeglib/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-filters.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html
ffmpeglib/include/libavutil/: ffversion.h
ffmpeglib/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeglib/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
